cluster/apps/telegram/rajoybot/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app rajoybot
  namespace: telegram
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
      app.kubernetes.io/instance: *app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
        app.kubernetes.io/instance: *app
    spec:
      containers:
        - name: mariadb-rajoybot
          image: mariadb:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: mariadb-rajoybot-volume
              mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 250m
              memory: 500Mi
        - name: *app
          image: elraro/rajoybot:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 250m
              memory: 500Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - name: mariadb-rajoybot-volume
          hostPath:
            path: /home/elraro/home-ops/volumes/rajoybot/mariadb-rajoybot-volume
