cluster/apps/telegram/rajoybot/database.yaml
---
# headless service https://kubernetes.io/es/docs/concepts/workloads/controllers/statefulset/
apiVersion: v1
kind: Service
metadata:
  name: &app mariadb-rajoybot
  namespace: telegram
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  selector:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  ports:
    - protocol: TCP
      name: mariadb
      port: 3306
      targetPort: 3306
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: &app mariadb-rajoybot
  namespace: telegram
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
      app.kubernetes.io/instance: *app
  serviceName: "mariadb-rajoybot"
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
        app.kubernetes.io/instance: *app
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mariadb-rajoy
          image: mariadb:latest
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb-rajoybot-volume
              mountPath: /var/lib/mysql
  volumes:
    - name: mariadb-rajoybot-volume
      hostPath:
        path: /home/elraro/home-ops/volumes/rajoybot/mariadb-rajoybot-volume
