cluster/apps/telegram/rajoybot/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app rajoybot
  namespace: telegram
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  selector:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  ports:
    - protocol: TCP
      name: rajoybot
      port: 80
      targetPort: 80
